# Audit_Application

./: .gitignore  CLAUDE.md  DATA_MODEL.md  MODULES.md  NOTES.md  PROGRESS.md  README.md  SETUP.md
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.svelte  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  lib.rs  paths.rs
app/src-tauri/src/auth/: keyvault.rs  mod.rs
app/src-tauri/src/blobs/: mod.rs
app/src-tauri/src/commands/: ai.rs  auth.rs  clients.rs  engagements.rs  evidence.rs  findings.rs  identity.rs  library.rs  mod.rs  reporting.rs  sync.rs  systems.rs  testing.rs  working_papers.rs
app/src-tauri/src/crypto/: cipher.rs  kdf.rs  keychain.rs  mod.rs  password.rs
app/src-tauri/src/db/: mod.rs
app/src-tauri/src/db/migrations/: 0001_foundations.sql  0002_identity.sql  0003_clients.sql  0004_engagements.sql  0005_systems.sql  0006_library.sql  0007_activity_log.sql  0008_testing_findings.sql  0009_evidence.sql  0010_cccer_finding_fields.sql  mod.rs
app/src-tauri/src/matcher/: access_review.rs  backup.rs  change_management.rs  csv.rs  itac_benford.rs  itac_boundary.rs  itac_duplicates.rs  itac_recurring.rs  mod.rs
app/src-tauri/src/models/: client.rs  engagement.rs  identity.rs  library.rs  mod.rs  sync.rs  system.rs
app/src/lib/api/: tauri.ts
app/src/lib/components/: AuthGate.svelte  FindingEditor.svelte  Shell.svelte
app/src/lib/routes/: Clients.svelte  Dashboard.svelte  EngagementDetail.svelte  Engagements.svelte  Library.svelte  Onboarding.svelte  Settings.svelte  SignIn.svelte  WorkingPaper.svelte
app/src/lib/stores/: auth.ts  router.ts  theme.ts
app/src/styles/: global.css  tokens.css
tools/sign-library-bundle/: Cargo.toml  README.md
tools/sign-library-bundle/src/: main.rs
