[package]
name = "audit-app"
version = "0.1.0"
description = "Audit Application"
authors = ["Simba Gangaidzo"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "audit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "zeroize"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
