[package]
name = "sign-library-bundle"
version = "0.1.0"
edition = "2021"
publish = false
description = "Offline CLI for generating, signing, and verifying Audit Application library bundles."

[[bin]]
name = "sign-library-bundle"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core", "zeroize"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
